# CaravanGL

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  test_caravan.py
include/: caravangl.h  caravangl_arg_indices.h  caravangl_context.h  caravangl_core.h  caravangl_loader.h  caravangl_module.h  caravangl_specs.h  caravangl_state.h  caravangl_uniforms.h
src/caravangl/: __init__.pyi  caravangl.c  caravangl_arg_indices.c  caravangl_arg_indices.h  caravangl_buffer.c  caravangl_buffer.h  caravangl_compute.c  caravangl_context.c  caravangl_context.h  caravangl_framebuffer.c  caravangl_module.h  caravangl_pipeline.c  caravangl_pipeline.h  caravangl_program.c  caravangl_program.h  caravangl_pyspec.h  caravangl_query.c  caravangl_sampler.c  caravangl_state.h  caravangl_sync.c  caravangl_texture.c  caravangl_uniform_upload.h  caravangl_uniformbatch.c  caravangl_uniformbatch.h  caravangl_vao.c  caravangl_vao.h  constants.pyi  gl_constants.inc  pycaravangl.h
src/core/: caravangl_core.c
tests/: test_core.py  test_draw.py  test_quick_draw.py  test_robustness.py  test_swarm.py  test_triangle.py
tools/: gen_gl_metadata.py  project_analyzer.py
