[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "caravangl"
version = "0.1.0"
description = "Modern Isolated OpenGL Context for Python 3.14"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Evilpasture" }]

[tool.scikit-build]
build.verbose = true
cmake.args = ["-GNinja"]
cmake.define = { "CMAKE_C_COMPILER" = "clang","CMAKE_CXX_COMPILER" = "clang++" }
wheel.packages = ["src/caravangl"]
wheel.exclude = ["src/*.c", "src/*.h", "cmake/*", "tests/*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Enable standard vanguards: Pyflakes (F), Charset-normalizer (C), 
# Isort (I), and the ever-important Bugbear (B)
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"